# g1_dance_deploy

./: .gitignore  MJDATA.TXT  MUJOCO_LOG.TXT  README.md  g1_motion_switcher_example.cpp  test.ipynb
FSM/: FSM.py  FSMState.py
common/: ctrlcomp.py  joystick.py  path_config.py  remote_controller.py  rotation_helper.py  rotation_helper_raw.py  utils.py
deploy_mujoco/: deploy_mujoco.py
deploy_mujoco/config/: mujoco.yaml
deploy_real/: deploy_real.py  deploy_real_submit.py  hardware_config.py  unitree_cpp_env.py  操作说明.md
g1_description/: g1.xml  g1_29dof_rev_1_0.xml  scene.xml  scene_raw.xml
policy/Beyond_kick/: BeyondMimic_old.py  Beyond_kick.py  Beyond_mimic.py  check_data.ipynb
policy/Beyond_kick/config/: BeyondMimic.yaml  BeyondMimic_old.yaml
policy/Beyond_kick/model/: Beyond_kick_level2.onnx  policy_fightAndSports1_s1.onnx
policy/Getup/: Getup.py
policy/Getup/config/: Getup.yaml
policy/Getup/model/: Getup1.onnx  Getup1_transition.onnx
policy/Getup_back/: Getup_back.py
policy/Getup_back/config/: Getup_back.yaml
policy/Getup_back/model/: Getup_back_notrans.onnx  Getup_back_transition.onnx
policy/Kobe_level1/: Kobe_level1.py
policy/Kobe_level1/config/: Kobe_level1.yaml
policy/Kobe_level1/model/: model_193000.onnx
policy/Kongfan/: Kongfan.py
policy/Kongfan/config/: Kongfan.yaml
policy/Kongfan/model/: 2025-12-29_19-33-06_kongfan_version1.onnx  2025-12-30_14-29-40_kongfan_version2_8300step.onnx  2026-01-05_18-37-53_kongfan_version2_fix_height5.onnx  2026-01-06_11-59-38_kongfan_version2_fix_height6.onnx  2026-01-06_11-59-38_kongfan_version2_fix_height6_10kstep.onnx  2026-01-07_13-40-00_kongfan_version2_fix_height7.onnx  2026-01-12_12-19-51_kongfan_version2_fix_height9.onnx  2026-01-12_12-19-51_kongfan_version2_fix_height9_8000_step.onnx  2026-01-13_11-03-10_kongfan_version2_fix_height10.onnx  2026-01-13_19-03-27_kongfan_version2_fix_height12_29k.onnx  2026-01-13_19-03-27_kongfan_version2_fix_height12_35k.onnx  2026-01-15_16-18-42_kongfan_version2_fix_height13.onnx  2026-01-21_13-59-08_kongfan_version2_fix_height15.onnx  2026-03-31_11-36-37_g1_sideflip_resume2.onnx  Sideflip.onnx  Sideflip_resume.onnx  Sideflip_resume2.onnx  (+2 more)
policy/Penguin_dance1/: Penguin_danc1.py
policy/Penguin_dance2/: Penguin_danc2.py
policy/Penguin_dance4/: Penguin_danc4.py
policy/Roundhouse_kick/: Roundhouse_kick.py
policy/dahuajiao/: dahuajiao.py
policy/fixedpose/: FixedPose.py
policy/gaigeshunfeng/: gaigeshunfeng.py
policy/guma_45s_dance/: guma_45s_dance.py
policy/guma_dance2/: guma_dance2.py
policy/guma_taiji/: guma_taiji.py
policy/guofucheng_dance/: guofucheng_dance.py
policy/jiangnanstyle/: jiangnanstyle.py
policy/loco_cooldown/: loco_cooldown.py  loco_cooldown_raw.py
policy/loco_mode/: LocoMode.py
policy/passive/: PassiveMode.py
policy/pick_up_box/: pick_up_box.py
policy/skill_cast/: SkillCast.py
policy/skill_cooldown/: SkillCooldown.py
policy/xinglian_dance1/: xinglian_dance1.py
policy/zoo_dance/: zoo_dance.py
unitree_cpp/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml
unitree_cpp/example/: config.py  unitree_cpp_env.py
unitree_cpp/src/: py_binding.cpp  unitree_controller.cpp  unitree_controller.hpp
unitree_cpp/src/unitree_cpp/: __init__.py
unitree_sdk2_python/unitree_sdk2py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+54 files in other folders)
