[build-system]
requires = ["scikit-build-core[pyproject]", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "unitree_cpp"
version = "1.0.3"
description = "Pybind11 binding for UnitreeController with Unitree SDK"
authors = [{ name = "GDDG08", email = "GDDG80@outlook.com" }]
license = { text = "CC-BY-4.0" }

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
